--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -15,16 +15,14 @@
         android:orientation="horizontal">
     <EditText
         android:id="@+id/edit_text"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
         android:hint="write task"
         android:textSize="20sp" />
    <Button
        android:id="@+id/btn"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:layout_weight="5"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
        android:text="add"/>
     </LinearLayout>
 
