--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
     <TextView
         android:id="@+id/time"
         android:layout_width="wrap_content"
@@ -17,19 +16,21 @@
         android:id="@+id/edit_text"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:hint="write task"
+        android:hint="write a task"
         android:textSize="20sp" />
    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:text="add"/>
+       android:text="add"
+       android:textColor="#FFFFFF"
+       android:background="@drawable/bg_btn" />
     </LinearLayout>
-
     <ListView
         android:id="@+id/list_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp">
     </ListView>
 
 </LinearLayout>
